cmake_minimum_required(VERSION 3.20)
project(HelloWorld)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(${PROJECT_SOURCE_DIR})
file(GLOB MY_SOURCES *.cpp)
add_library(${PROJECT_NAME} SHARED ${MY_SOURCES})
target_compile_options(${PROJECT_NAME} PRIVATE -fPIC -DKXVER=4)
target_link_libraries(${PROJECT_NAME} -static-libgcc -static-libstdc++)
set(QHOME_BINARY_FOLDER $ENV{QHOME}/$ENV{QARCH})
message(STATUS ${QHOME_BINARY_FOLDER})
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${QHOME_BINARY_FOLDER})
